--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.10",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-gauge-chart": "^0.4.1",
+    "react-native": "0.72.4",
+    "react-native-cool-speedometer": "^1.2.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-charts": "^1.3.9",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.10.6",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "use-gauge": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
